--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+jsonwebtoken = "7"
+serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.neon]
 version = "0.9"
