--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jsonwebtoken-neon",
+  "name": "neon-jsonwebtoken",
   "version": "0.1.0",
-  "description": "",
+  "description": "This project was bootstrapped by [create-neon](https://www.npmjs.com/package/create-neon).",
   "main": "index.node",
   "scripts": {
     "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
