build(npm): move cargo-cp-artifact dependencies

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "yoonhoGo <lylisha@gmail.com>",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "cargo-cp-artifact": "^0.1"
   },
   "repository": {
